--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
       <hr class="subtitle-hr">
       <div class="col-xs-12 xsrp">
         <div class="col-lg-3 text-xl-center colfixleft pr30">
-          <img class="media-fw portrait" src="img/portrait.png">
+          <img class="media-fw portrait" src="img/AdamVerner_Portrait.png">
         </div>
         <div class="col-lg-9 colfixleft xsrp">
           <p class="text-3">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.
