--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="home-carousel" class="carousel slide home-carousel-img" data-ride="carousel">
           <div class="carousel-inner home-carousel-img" role="listbox">
             <div class="carousel-item active" id="firstSlide">
-              <img src="img/Home-1.jpg" alt="Flatiron View">
+              <img src="img/Homepage.jpg" alt="Flatiron View">
             </div>
           </div>
         </div>
