--- a/irvingplace.html
+++ b/irvingplace.html
@@ -88,21 +88,21 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving/facade-min.jpg">
+            <img src="img/Irving/Irving_1_Facade.jpg">
             <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving/A-min.jpg" alt="">
+            <img src="img/Irving/Irving_2_Detail.jpg" alt="">
             <p>An upscale mixology bar (“Dear Irving”) occupies 2,500 sf at the property and includes the lavish private back room pictured above, drawing a sophisticated and celebrity clientele.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Irving-Render.png">
+        <img src="img/Irving_Render.png">
         <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree.</p>
-        <img class="img-circle" src="img/Irving/circle-min.jpg">
+        <img class="img-circle" src="img/Irving/Irving_3_Circle.jpg">
         <p class="case-textblock">A vibrant, highly walkable neighborhood with a range of amenities, including the famous greenmarket at Union Square.</p>
       </div>
     </div>
