--- a/miamibeach.html
+++ b/miamibeach.html
@@ -86,21 +86,21 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Miami/facade-min.jpg">
+            <img src="img/Miami/Miami_1_Facade.jpg">
             <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric boutique hospitality experience catering to a hip, youthful and international clientele.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Miami/A-min.jpg">
+            <img src="img/Miami/Miami_2_Detail.jpg">
             <p>The new development sits just steps from the Lincoln Road pedestrian mall and its many shops, restaurants and attractions.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Miami-Render.png">
+        <img src="img/Miami_Render.png">
         <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look.</p>
-        <img class="img-circle" src="img/Miami/circle-min.jpg">
+        <img class="img-circle" src="img/Miami/Miami_3_Circle.jpg">
         <p class="case-textblock">A premier destination for younger travelers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix and 24/7 entertainment.</p>
       </div>
     </div>
