--- a/williamsburg.html
+++ b/williamsburg.html
@@ -84,21 +84,21 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Williamsburg/facade-min.jpg">
+            <img src="img/Williamsburg/Williamsburg_1_Facade.jpg">
             <p class="extra-lower">A striking new build delivering 32 stylish, loft-style condominium units to the vibrant East Williamsburg market.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Williamsburg/A-min.jpg" alt="">
+            <img src="img/Williamsburg/Williamsburg_2_Detail.jpg" alt="">
             <p>A range of amenities – including a game room, full gym and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Williamsburg-Render.png">
+        <img src="img/Williamsburg_Render.png">
         <p class="case-textblock">Expansive terraces and open-concept layouts make the property especially attractive to the neighborhood’s younger residents.</p>
-        <img class="img-circle" src="img/Williamsburg/circle-min.jpg">
+        <img class="img-circle" src="img/Williamsburg/Williamsburg_3_Circle.jpg">
         <p class="case-textblock">East Williamsburg continues to grow in affluence while still retaining true neighborhood charm.</p>
       </div>
     </div>
