--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -84,21 +84,21 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Columbia/facade-min.jpg">
+            <img src="img/Columbia/Columbia_1_Facade.jpg">
             <p class="extra-lower">52 large units and 7 retail stores in a highly advantaged location in the heart of West Harlem and adjacent to Columbia University.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Columbia/A-min.jpg" alt="">
+            <img src="img/Columbia/Columbia_2_Detail.jpg" alt="">
             <p>Historic brownstones with period details deliver classic New York charm to tenants.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
-        <img src="img/Columbia-Render.png">
+        <img src="img/Columbia_Render.png">
         <p class="case-textblock">The majority of the units are 3-bedroom apartments, especially attractive to the area’s burgeoning professional class.</p>
-        <img class="img-circle" src="img/Columbia/circle-min.jpg">
+        <img class="img-circle" src="img/Columbia/Columbia_3_Circle.jpg">
         <p class="case-textblock">A vibrant, thriving neighborhood poised to grow significantly with Columbia University’s multi-billion dollar expansion plans.</p>
       </div>
     </div>
