--- a/irvingplace.html
+++ b/irvingplace.html
@@ -69,7 +69,7 @@
         <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
-        <p class="case-textblock">Many successful investments begin by identifying potential value where others do not. The property at the corner of Irving Place and 17th Street is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in significantly below market rents and an opportunity to substantially reposition the asset to be more in line with its local surroundings.</p>
+        <p class="case-textblock">Many successful investments begin by identifying potential value where others do not. The property at the corner of Irving Place and 17th Street is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged and underutilized property, resulting in significantly below market rents and an opportunity to substantially reposition the asset to be more in line with its local surroundings.</p>
         <hr>
         <p>6 story elevator building</p>
         <hr>
