--- a/irvingplace.html
+++ b/irvingplace.html
@@ -87,13 +87,13 @@
       </div>
       <div class="col-sm-6">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Irving/Irving_1_Facade.jpg">
             <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Irving/Irving_2_Detail.jpg" alt="">
             <p>An upscale mixology bar (“Dear Irving”) occupies 2,500 sf at the property and includes the lavish private back room pictured above, drawing a sophisticated and celebrity clientele.</p>
           </div>
