--- a/bedstuy.html
+++ b/bedstuy.html
@@ -83,13 +83,13 @@
       </div>
       <div class="col-sm-6">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/BedStuy/Bed-Stuy_1_Facade.jpg">
             <p class="extra-lower">With convenient access to Pratt, Parsons, and The New School, this 9 story, 65,000 square foot building taps into a significant population of students and recent grads.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/BedStuy/Bed-Stuy_2_Detail.jpg" alt="">
             <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture.</p>
           </div>
