--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -83,13 +83,13 @@
       </div>
       <div class="col-sm-6">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Columbia/Columbia_1_Facade.jpg">
             <p class="extra-lower">52 large units and 7 retail stores in a highly advantaged location in the heart of West Harlem and adjacent to Columbia University.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Columbia/Columbia_2_Detail.jpg" alt="">
             <p>Historic brownstones with period details deliver classic New York charm to tenants.</p>
           </div>
