--- a/miamibeach.html
+++ b/miamibeach.html
@@ -85,13 +85,13 @@
       </div>
       <div class="col-sm-6">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Miami/Miami_1_Facade.jpg">
             <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric boutique hospitality experience catering to a hip, youthful and international clientele.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Miami/Miami_2_Detail.jpg">
             <p>The new development sits just steps from the Lincoln Road pedestrian mall and its many shops, restaurants and attractions.</p>
           </div>
