--- a/williamsburg.html
+++ b/williamsburg.html
@@ -83,13 +83,13 @@
       </div>
       <div class="col-sm-6">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Williamsburg/Williamsburg_1_Facade.jpg">
             <p class="extra-lower">A striking new build delivering 32 stylish, loft-style condominium units to the vibrant East Williamsburg market.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 xsrp">
             <img src="img/Williamsburg/Williamsburg_2_Detail.jpg" alt="">
             <p>A range of amenities – including a game room, full gym and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
