--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 about-img-hold">
+      <div class="col-lg-6 about-img-hold hidden-xs-down">
         <p class="subtitle invisible-subtitle">Our Story</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
       </div>
