--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
           <p>T: 212 596 6960</p>
         </a>
         <a href="mailto:info@springhousepartners.com">
-          <p><u>info@springhousepartners.com</u></p>
+          <p><u>E: info@springhousepartners.com</u></p>
         </a>
       </div>
       <div class="offset-sm-1 col-sm-8">
