--- a/bedstuy.html
+++ b/bedstuy.html
@@ -65,7 +65,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
@@ -81,7 +81,7 @@
           <img class="img-circle roundmap" src="img/Map_Bedford.jpg">
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12 xsrp">
             <img src="img/BedStuy/Bed-Stuy_1_Facade.jpg">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <img src="img/Bed-Stuy_Render.png">
         <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces.</p>
         <img class="img-circle" src="img/BedStuy/Bed-Stuy_3_Circle.jpg">
