--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -65,7 +65,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <p>Columbia University</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
@@ -81,7 +81,7 @@
           <img class="img-circle roundmap" src="img/Map_ColumbiaUni.jpg">
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12 xsrp">
             <img src="img/Columbia/Columbia_1_Facade.jpg">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <img src="img/Columbia_Render.png">
         <p class="case-textblock">The majority of the units are 3-bedroom apartments, especially attractive to the area’s burgeoning professional class.</p>
         <img class="img-circle" src="img/Columbia/Columbia_3_Circle.jpg">
