--- a/miamibeach.html
+++ b/miamibeach.html
@@ -65,7 +65,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <p>Miami Beach</p>
         <h1>Hospitality Innovation</h1>
         <hr>
@@ -83,7 +83,7 @@
           <img class="img-circle roundmap" src="img/Map_MiamiBeach.jpg">
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12 xsrp">
             <img src="img/Miami/Miami_1_Facade.jpg">
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <img src="img/Miami_Render.png">
         <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look.</p>
         <img class="img-circle" src="img/Miami/Miami_3_Circle.jpg">
