--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="col-lg-6 about-img-hold hidden-xs-down">
-        <p class="subtitle invisible-subtitle">Our Story</p>
+        <p class="subtitle invisible-subtitle">&nbsp;</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
       </div>
     </div>
@@ -107,8 +107,8 @@
             <br>Since its inception in 2010, Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors. Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American,
             an owner and operator of 12,000 apartments in the New York Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Adam was also responsible for the management and oversight
             of the Grand Review portfolio, a 20 building collection of mixed-use assets spread throughout New York City.
-            <br>
-            <br>Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized in opportunistic investments
+            <br class="hidden-md-down">
+            <br class="hidden-md-down">Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized in opportunistic investments
             across all property types.
             <br>
             <br>Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory
