--- a/irvingplace.html
+++ b/irvingplace.html
@@ -65,7 +65,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
@@ -85,7 +85,7 @@
           <img class="img-circle roundmap" src="img/Map_IrvingPlace.jpg">
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12 xsrp">
             <img src="img/Irving/Irving_1_Facade.jpg">
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <img src="img/Irving_Render.png">
         <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree.</p>
         <img class="img-circle" src="img/Irving/Irving_3_Circle.jpg">
