--- a/williamsburg.html
+++ b/williamsburg.html
@@ -65,7 +65,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
@@ -81,7 +81,7 @@
           <img class="img-circle roundmap" src="img/Map_Williamsburg.jpg">
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12 xsrp">
             <img src="img/Williamsburg/Williamsburg_1_Facade.jpg">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <img src="img/Williamsburg_Render.png">
         <p class="case-textblock">Expansive terraces and open-concept layouts make the property especially attractive to the neighborhood’s younger residents.</p>
         <img class="img-circle" src="img/Williamsburg/Williamsburg_3_Circle.jpg">
