--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
     <div class="collapse navbar-toggleable-xs" id="topNav">
       <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
+        <hr class="hidden-sm-up">
         <li class="nav-item">
           <a class="nav-link active" href="about.html">About</a>
         </li>
@@ -59,6 +60,7 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
+        <hr class="hidden-sm-up">
       </ul>
     </div>
   </nav>
@@ -81,9 +83,7 @@
           <div class="col-sm-6 remove-right">
             <p>Our flexibility and nimbleness at all stages of the investment and development process is an advantage in any economic cycle. We are a hands on manager with capabilities in investment, finance, construction, property management and design.</p>
             <hr class="about-hr">
-            <p class="quote text-xs-center">Entrepreneurial Spirit
-              <br>+
-              <br>Institutional Execution</p>
+            <p class="quote text-xs-center">Entrepreneurial Spirit<br>+<br>Institutional Execution</p>
             <hr class="about-hr">
             <p>We target relationship driven situations with strong long term growth potential. Our goal is to create significant value for each project and neighborhood we work in.</p>
           </div>
