--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="collapse navbar-toggleable-xs" id="topNav">
       <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
+        <hr class="hidden-sm-up">
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
@@ -60,6 +61,7 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
+        <hr class="hidden-sm-up">
       </ul>
     </div>
   </nav>
