--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
     <div class="collapse navbar-toggleable-xs" id="topNav">
       <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
+        <hr class="hidden-sm-up">
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
@@ -59,6 +60,7 @@
         <li class="nav-item">
           <a class="nav-link active" href="contact.html">Contact</a>
         </li>
+        <hr class="hidden-sm-up">
       </ul>
     </div>
   </nav>
