--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
     </button>
+    <a class="navbar-brand-mobile hidden-sm-up" href="index.html"><img src="img/logo.svg"></a>
     <div class="collapse navbar-toggleable-xs" id="topNav">
-      <a class="navbar-brand" href="index.html"><img src="img/logo.svg"></a>
+      <a class="navbar-brand hidden-sm-down" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
         <hr class="hidden-sm-up">
         <li class="nav-item">
@@ -82,7 +83,8 @@
       <hr class="subtitle-hr home-hr-fix">
       <div class="col-sm-6">
         <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
-          development.</p>
+          development.
+        </p>
       </div>
       <div class="col-sm-6">
         <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout
