--- a/press.html
+++ b/press.html
@@ -72,7 +72,7 @@
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyNYCLogo.png">
         <hr>
-        <h1 class="text-xs-center quote-sm">Springhouse pays $55,000,000 for Union Square gem</h1>
+        <h1 class="text-xs-center quote-sm r1-qa">Springhouse pays $55,000,000 for Union Square gem</h1>
         <hr>
         <p>Adam Verner’s Springhouse Partners is the new owner of a mixed-use rental building on Irving Place near Gramercy Park, having paid longtime owners the Rumpel family $55 million for the property. The six-story, 50,000-square-foot building at 51
           Irving Place, on the corner of East 17th Street, holds 56 rental units, the majority of which are market-rate. The property...</p>
@@ -80,11 +80,11 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-md-6 col-lg-3">
+      <div class="col-md-6 col-lg-3 r1-a2">
         <hr>
         <img class="press-logo" src="img/TheWallStreetJournal.png">
         <hr>
-        <h1 class="text-xs-center quote-sm">Uptown Maintains Upside</h1>
+        <h1 class="text-xs-center quote-sm r1-qb">Uptown Maintains Upside</h1>
         <hr>
         <p>Soaring property values in New York neighborhoods once associated with crime and poverty are producing healthy profits for developers who jumped in early. Consider this recent deal: Springhouse Partners' Adam Verner just purchased two Harlem apartment
           buildings with 59 mostly-rent-regulated units and seven retail spaces for $15.4 million. The seller was...</p>
@@ -197,6 +197,11 @@
           }, 1000);
       }
     );
+  </script>
+  <script>
+  $(document).ready(function() {
+    //$(".r1-qb").css("height", $(".r1-qa").height());
+  });
   </script>
 </body>
 
