--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 about-img-hold hidden-xs-down">
+      <div class="col-lg-6 about-img-hold">
         <p class="subtitle invisible-subtitle">&nbsp;</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
       </div>
