--- a/bedstuy.html
+++ b/bedstuy.html
@@ -68,7 +68,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <img src="img/Bed-Stuy_Render.png">
         <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces.</p>
         <img class="img-circle" src="img/BedStuy/Bed-Stuy_3_Circle.jpg">
