--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -68,7 +68,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <p>Columbia University</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <img src="img/Columbia_Render.png">
         <p class="case-textblock">The majority of the units are 3-bedroom apartments, especially attractive to the area’s burgeoning professional class.</p>
         <img class="img-circle" src="img/Columbia/Columbia_3_Circle.jpg">
