--- a/irvingplace.html
+++ b/irvingplace.html
@@ -68,7 +68,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
@@ -102,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <img src="img/Irving_Render.png">
         <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree.</p>
         <img class="img-circle" src="img/Irving/Irving_3_Circle.jpg">
