--- a/miamibeach.html
+++ b/miamibeach.html
@@ -68,7 +68,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <p>Miami Beach</p>
         <h1>Hospitality Innovation</h1>
         <hr>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <img src="img/Miami_Render.png">
         <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look.</p>
         <img class="img-circle" src="img/Miami/Miami_3_Circle.jpg">
