--- a/williamsburg.html
+++ b/williamsburg.html
@@ -68,7 +68,7 @@
 
   <div class="container-fluid" id="caseStudy">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6 col-lg-3">
         <img src="img/Williamsburg_Render.png">
         <p class="case-textblock">Expansive terraces and open-concept layouts make the property especially attractive to the neighborhood’s younger residents.</p>
         <img class="img-circle" src="img/Williamsburg/Williamsburg_3_Circle.jpg">
