--- a/press.html
+++ b/press.html
@@ -137,7 +137,7 @@
         <p>Goldwater Realty, a Miami Beach-based company managed by Zalman Fellig, sold the building at 1700 Alton Road to AC 1700 Alton Owner, which is managed by Springhouse Partners founder Adam Verner. Forte Capital Management was also part of the deal.
           The buyer obtained a $19.04 million mortgage from Ladder Capital Finance...</p>
         <a href="Springhouse-SFBJ-052015.pdf" target="_blank">
-          <p><u>Read more ></u></p>
+          <p class="press-fix"><u>Read more ></u></p>
         </a>
       </div>
       <div class="col-md-6 col-lg-3">
