--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </button>
     <a class="navbar-brand-mobile hidden-sm-up" href="index.html"><img src="img/logo.svg"></a>
     <div class="collapse navbar-toggleable-xs" id="topNav">
-      <a class="navbar-brand hidden-sm-down" href="index.html"><img src="img/logo.svg"></a>
+      <a class="navbar-brand hidden-xs-down" href="index.html"><img src="img/logo.svg"></a>
       <ul class="nav navbar-nav">
         <hr class="hidden-sm-up">
         <li class="nav-item">
